--- a/app/assets/css/breathing.css
+++ b/app/assets/css/breathing.css
@@ -1,8 +1,8 @@
 #processing {
     padding: 0;
     margin: auto;
-    display:block;
+    display:green;
  }
  #breathing {
-    background-color:black;
+    background-color:green;
  }
